fix viewport on mobile

--- a/style.css
+++ b/style.css
@@ -34,6 +34,13 @@ body {
     body {
         padding: 0 64px;
     }
+    .activeNavButton {
+        font-size: 30px;
+    }
+
+    .navButton {
+        font-size: 30px;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -56,7 +63,7 @@ main {
     border-width: 2px;
     border-style: solid;
     border-color: var(--color-surface);
-    font-size: 30px;
+    font-size: 20px;
     text-decoration: none;
     color: var(--color-text);
     transition: background-color 500ms;
@@ -71,7 +78,7 @@ main {
     border-width: 2px;
     border-style: solid;
     border-color: var(--color-surface);
-    font-size: 30px;
+    font-size: 20px;
     text-decoration: none;
     color: var(--color-text);
     background-color: var(--color-surface);
